// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Checkbox /> renders checked 1`] = `
.cDCEzS {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 7px;
  border: 1px solid #000;
  border-radius: 4px;
  background-color: ;
  width: 12px;
  height: 12px;
  font-size: 12px;
}

.cDCEzS:hover:not([disabled]) {
  border-color: #000;
}

.ewegQT {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  opacity: 0;
}

<span
  checked={true}
  className="sc-bdVaJa cDCEzS"
  disabled={undefined}
  size={undefined}
>
  <svg
    height="7"
    viewBox="0 0 9 7"
    width="9"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      P
    </title>
    <path
      d="M8.807.477A.625.625 0 0 0 8.35.283a.57.57 0 0 0-.44.194L3.217 5.17 1.09 3.043a.596.596 0 0 0-.44-.176.657.657 0 0 0-.457.176A.625.625 0 0 0 0 3.5c0 .176.064.328.193.457L2.76 6.523a.625.625 0 0 0 .457.194.57.57 0 0 0 .44-.194l5.15-5.15a.615.615 0 0 0 0-.896z"
      fill="#2F333D"
      fillRule="evenodd"
    />
  </svg>
  <input
    checked={true}
    className="sc-bwzfXH ewegQT"
    disabled={undefined}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
    value={true}
  />
</span>
`;

exports[`<Checkbox /> renders disabled 1`] = `
.jiNQyH {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 7px;
  border: 1px solid #999;
  border-radius: 4px;
  background-color: #f3f3f3;
  width: 12px;
  height: 12px;
  font-size: 12px;
}

.jiNQyH:hover:not([disabled]) {
  border-color: #000;
}

.ewegQT {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  opacity: 0;
}

<span
  checked={false}
  className="sc-bdVaJa jiNQyH"
  disabled={true}
  size={undefined}
>
  <input
    checked={false}
    className="sc-bwzfXH ewegQT"
    disabled={true}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
    value={false}
  />
</span>
`;

exports[`<Checkbox /> renders larger 1`] = `
.fVsyKZ {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 7px;
  border: 1px solid #999;
  border-radius: 4px;
  background-color: ;
  width: 14px;
  height: 14px;
  font-size: 14px;
}

.fVsyKZ:hover:not([disabled]) {
  border-color: #000;
}

.ewegQT {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  opacity: 0;
}

<span
  checked={false}
  className="sc-bdVaJa fVsyKZ"
  disabled={undefined}
  size="large"
>
  <input
    checked={false}
    className="sc-bwzfXH ewegQT"
    disabled={undefined}
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
    value={false}
  />
</span>
`;

exports[`<Checkbox /> renders styled span element with input 1`] = `
.gdWaqZ {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-right: 7px;
  border: 1px solid #999;
  border-radius: 4px;
  background-color: ;
  width: 12px;
  height: 12px;
  font-size: 12px;
}

.gdWaqZ:hover:not([disabled]) {
  border-color: #000;
}

.ewegQT {
  position: absolute;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  opacity: 0;
}

<span
  checked={false}
  className="sc-bdVaJa gdWaqZ"
  disabled={undefined}
  size={undefined}
>
  <input
    checked={false}
    className="sc-bwzfXH ewegQT"
    disabled={undefined}
    name="test"
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
    value={false}
  />
</span>
`;
